--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<div class="header-wrapper border-bottom">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -8,7 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link"  routerLink="/" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link"  routerLink="/" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" fragment="Introduction">Introduction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" fragment="Benefits">Benefits</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" fragment="Services">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="dashboard">Dashboard</a>
@@ -17,3 +27,4 @@
     </div>
   </div>
   </nav>
+</div>
