--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h2 id="Inroduction">Inroduction</h2>
+<h2 id="Introduction">Introduction</h2>
 <p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur accusantium fugiat quod numquam odit facilis autem tenetur deleniti, odio, aliquam commodi libero ipsa temporibus assumenda repellat tempore iusto consequatur. Assumenda.
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur accusantium fugiat quod numquam odit facilis autem tenetur deleniti, odio, aliquam commodi libero ipsa temporibus assumenda repellat tempore iusto consequatur. Assumenda.
