--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,12 +37,8 @@
                    <span class="label">Status : </span> <span class="badge" [ngClass]="{'badge-success': item.status =='Active', 'badge-danger' : item.status !='Active'}">{{item.status}}</span>
                 </div>
                 <div class="details" [class.mt-2]="!listViewActive">
-                    <!-- [routerLink]="['/employee']" 
                     
-                    [queryParams]="{id: item.userId}"  -->
-                    <a [routerLink]="['/employee', item.id]"
-                    
-                    class="btn btn-outline-success btn-sm">View Employee</a>
+                    <a [routerLink]="['/employee', item.id]" class="btn btn-outline-success btn-sm">View Employee</a>
                     <button class="btn btn-outline-danger btn-sm ml-2" (click)="onDeleteEmployee(item.userId)"><i class="fa fa-remove"></i></button>
                 </div>
             </div>
